desktop screen booking section fixed with spacing and text box sizes. font sizes as well. Small screen logo and titlle smaller as well.

--- a/css/partials/body.css
+++ b/css/partials/body.css
@@ -116,8 +116,6 @@ body, html {
     text-decoration: none;
 }
 
-
-
 /*BBQ*/
 .gallery-bbq {
     text-align: center;
@@ -135,9 +133,6 @@ body, html {
     margin-top: 1em;
     font-size: 1.2 em;
 
-    /* text-decoration: none;
-    color: inherit;
-    color: white; */
 
 }
 
@@ -173,4 +168,5 @@ body, html {
     margin-top: 1em;
     font-size: 1.2 em;
 }
+
 
