--- a/css/partials/smallscreen.css
+++ b/css/partials/smallscreen.css
@@ -43,17 +43,23 @@
   .site-header {
     flex-direction: column;
     text-align: center;
-    padding: 1em;
+    padding: 0.3em;
+  }
+  .site-header h1 {
+    font-size: 1.3em;
+    margin: 0;
   }
 
   .logo-group {
     flex-direction: column;
     align-items: center;
-    gap: 0.5em;
+    gap: 0.2em;
+    margin: 0;
+    padding: 0;
   }
 
   .site-logo {
-    max-width: 120px;
+    max-width: 90px;
     height: auto;
   }
 
@@ -119,6 +125,10 @@
 
 
   /* BOOKING SECTION */
+  .form-row {
+    flex-direction: column;
+    gap:0.2em;
+  }
   #booking-section {
     padding: 2em 1em;
   }
@@ -140,18 +150,19 @@
   #booking-form label {
     display: block;
     font-weight: bold;
-    margin-top: 1em;
+    margin-top: 0.5em;
   }
 
   #booking-form input,
   #booking-form select,
   #booking-form textarea {
-    width: 100%;
+    width: 95%;
     padding: 0.75em;
-    margin-top: 0.3em;
+    margin-top: 0.2em;
     border-radius: 6px;
     border: 1px solid #ccc;
     font-size: 1em;
+    margin-bottom: 0.5em;
   }
 
   #booking-form button {
@@ -167,9 +178,9 @@
     cursor: pointer;
   }
 
-  #booking-form button:hover {
+  /* #booking-form button:hover {
     background-color: #3d2a15;
-  }
+  } */
 
   .menu-details img {
     width: 100%;
